[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/scrolling_background.gd" type="Script" id=1]
[ext_resource path="res://assets/image8.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/gugi-55.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/Gugi-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/MenuButtons.gd" type="Script" id=5]
[ext_resource path="res://scripts/Difficulty.gd" type="Script" id=6]
[ext_resource path="res://scripts/Start.gd" type="Script" id=7]
[ext_resource path="res://scripts/Global.gd" type="Script" id=8]
[ext_resource path="res://scenes/Highscore.gd" type="Script" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x -= TIME * scroll_speed;
	vec4 col = texture(TEXTURE, shifteduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Game" type="Node2D"]

[node name="Global" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Background" type="Node2D" parent="."]

[node name="image" type="TextureRect" parent="Background"]
material = SubResource( 2 )
margin_left = 603.0
margin_right = 1856.0
margin_bottom = 603.0
rect_rotation = 90.0
texture = ExtResource( 2 )
stretch_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_speed = 0.1

[node name="UI" type="Node2D" parent="."]

[node name="Title" type="Label" parent="UI"]
margin_top = 300.0
margin_right = 576.0
margin_bottom = 381.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.301961, 0.301961, 1 )
text = "Save the Planet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="Node2D" parent="UI"]
position = Vector2( 0, 500 )
script = ExtResource( 5 )

[node name="Start" type="Node2D" parent="UI/MenuButtons"]
script = ExtResource( 7 )

[node name="StartMenu" type="VBoxContainer" parent="UI/MenuButtons/Start"]
margin_right = 576.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_right = 576.0
margin_bottom = 47.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
enabled_focus_mode = 0
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscores" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 51.0
margin_right = 576.0
margin_bottom = 98.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
enabled_focus_mode = 0
text = "Highscores"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 102.0
margin_right = 576.0
margin_bottom = 149.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Start"]
playback_speed = 2.5
playback/speed = 2.5

[node name="Difficulty" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 576, 0 )
script = ExtResource( 6 )

[node name="DifficultyMenu" type="VBoxContainer" parent="UI/MenuButtons/Difficulty"]
margin_right = 576.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_right = 576.0
margin_bottom = 47.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
enabled_focus_mode = 0
text = "Easy"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 51.0
margin_right = 576.0
margin_bottom = 98.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
enabled_focus_mode = 0
text = "Medium"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 102.0
margin_right = 576.0
margin_bottom = 149.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
enabled_focus_mode = 0
text = "Hard"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UI/MenuButtons/Difficulty"]
margin_top = 450.0
margin_right = 576.0
margin_bottom = 497.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
enabled_focus_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Difficulty"]
playback_speed = 2.5
playback/speed = 2.5

[node name="Highscore" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( -576, 0 )
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuButtons/Highscore"]
margin_right = 576.0
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Label" parent="UI/MenuButtons/Highscore/VBoxContainer"]
margin_right = 576.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
text = "Easy"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Label" parent="UI/MenuButtons/Highscore/VBoxContainer"]
margin_top = 45.0
margin_right = 576.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
text = "Medium"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Label" parent="UI/MenuButtons/Highscore/VBoxContainer"]
margin_top = 90.0
margin_right = 576.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
text = "Hard"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back2" type="Button" parent="UI/MenuButtons/Highscore"]
margin_top = 450.0
margin_right = 576.0
margin_bottom = 497.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Highscore"]
playback_speed = 2.5
playback/speed = 2.5
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Start" to="UI/MenuButtons" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Highscores" to="UI/MenuButtons" method="_on_Highscores_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Quit" to="UI/MenuButtons" method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Easy" to="UI/MenuButtons/Difficulty" method="_on_Easy_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Medium" to="UI/MenuButtons/Difficulty" method="_on_Medium_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Hard" to="UI/MenuButtons/Difficulty" method="_on_Hard_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/Back" to="UI/MenuButtons" method="_on_Back_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Highscore/Back2" to="UI/MenuButtons" method="_on_Back2_pressed"]
